# mindbender

./: .gitignore  CMakeLists.txt  GPL_include  Makefile  Makefile.MacOSX  Makefile.common  README.md  camera.cpp  camera.h  configuration.cpp  configuration.h  events.cpp  events.h  game.cpp  game.h  licence.txt  main.cpp  main.h  readme.txt  saveload.cpp  sound.cpp  sound.h  sushimodule.cpp  sushimodule.h  timers.cpp  timers.h  video.cpp  video.h
cl2/: Makefile  cl2.h  gpl_header  readme
cl2/samples/: fibo.cl2  function.cl2  geordi.cl2  if.cl2  loop.cl2  objects.cl2  strings.cl2  test.cl2  vars.cl2
cl2/src/: cl2.h  clopcode.cpp  test.cpp
cl2/src/compiler/: clcompiler.cpp  clcompiler.h  clcompiler_agent_ext.cpp  clcompiler_mindbender_ext.cpp  clifunction.cpp  cliinstruction.cpp  cllexer.cpp  cllexer.h
cl2/src/opt/: clnamespace.cpp
cl2/src/serialize/: clserializer.h  clserialloader.h  clserialsaver.cpp  cluserdataserializer.h
cl2/src/value/: clarray.cpp  clarray.h  clexternalfunction.cpp  clexternalfunction.h  clfunction.cpp  clfunction.h  clobject.cpp  clobject.h  clstring.cpp  clstring.h  cltable.cpp  cltable.h  cluserdata.h  clvalue.cpp  clvalue.h
cl2/src/vm/: clcollectable.cpp  clcontext.cpp  clmathmodule.h  clmodule.h  clsysmodule.cpp  clthread.cpp  clthread.h
dcdraw/: Makefile.kos  dcdraw.cpp  dcdraw.h  sx  transform.h
dcdraw/kos/: kos_drv.h  texture.old_cpp
dcdraw/opengl/: opengl_drv.h
libs/: .cvsignore  build.sh  libs.txt
libs/cl2/: Makefile  todo
libs/cl2/samples/: loop.cl2  strings.cl2  test.cl2  vars.cl2
libs/cl2/src/: clopcode.h  test.cpp
libs/cl2/src/compiler/: clcompiler.cpp  clcompiler.h  clcompiler_agent_ext.cpp  clifunction.cpp  clifunction.h  cliinstruction.h  cllexer.cpp
libs/cl2/src/opt/: clnamespace.h
libs/cl2/src/serialize/: clserialloader.cpp  clserialloader.h  clserialsaver.h
libs/cl2/src/value/: clexternalfunction.h  clobject.cpp  clobject.h  clstring.cpp  cltable.h  cluserdata.cpp  cluserdata.h
libs/cl2/src/vm/: clcollectable.h  clcontext.cpp  clcontext.h  clmathmodule.cpp  clmodule.cpp  clmodule.h  clsysmodule.h  clthread.cpp
libs/dcdraw/: Makefile.opengl  canvas.cpp  canvas.h  canvas_png.cpp  canvas_png.h  clip.h  color.h  dcdraw.cpp  dcdraw.h  gl  shared_ptr.h  transform.h  vector.h
libs/dcdraw/kos/: kos_drv.cpp  texture.cpp  texture.h
libs/dcdraw/opengl/: opengl_drv.cpp  texture.cpp  texture.h
make/: Makefile.win  MindBender.dev  MindBender.layout  MindBender_private.h  MindBender_private.rc  MindBender_private.res
object/: actor.cpp  actor.h  bagitem.cpp  bagitem.h  font.cpp  font.h  item.cpp  item.h  room.cpp  room.h  roomobject.cpp  roomobject.h  shape.cpp  shape.h  sound.cpp  sound.h  sprite.cpp  sprite.h  tableobject.cpp  tableobject.h  timer.cpp  timer.h
resource/: font.cpp  font.h  font_bitmap.cpp  font_bitmap.h  image.cpp  image.h  loadxml.h  manager.cpp  manager.h  polygon.cpp  polygon.h  resource.cpp  resource.h  sound.cpp  sound.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  sprite_simple.cpp  sprite_simple.h
resource/tools/: physfsrwops.h  polygonpath.cpp  polygonpath.h  tools.h
scene/: gameloader.cpp  gameloader.h  scenelexer.cpp  scenelexer.h  sceneloader.cpp  sceneloader.h  sceneparser.cpp  sceneparser.h
src/: camera.cpp  configuration.cpp  configuration.h  game.h  main.cpp  main.h  sound.h  sushimodule.cpp  timers.cpp  video.cpp
src/cl2/: cl2.h  clopcode.cpp  clopcode.h
src/cl2/compiler/: clcompiler.cpp  clifunction.h  cliinstruction.cpp  cliinstruction.h  cllexer.h
src/cl2/opt/: clnamespace.cpp  clnamespace.h
src/cl2/serialize/: clserialloader.cpp  clserialsaver.h
src/cl2/value/: clarray.cpp  clarray.h  clexternalfunction.cpp  clstring.h  cluserdata.cpp
src/cl2/vm/: clcollectable.h  clcontext.h  clmathmodule.cpp  clmodule.cpp  clsysmodule.h
src/dcdraw/: canvas.cpp  canvas.h  canvas_png.cpp  clip.h  dcdraw.h  opengl_drv.cpp  opengl_drv.h  texture.cpp  texture.h
src/object/: actor.h  bagitem.cpp  bagitem.h  item.cpp  item.h  room.h  roomobject.h  shape.cpp  sprite.cpp  sprite.h  tableobject.h  timer.cpp
src/resource/: font.cpp  font.h  font_bitmap.cpp  font_bitmap.h  loadxml.h  manager.h  polygon.cpp  polygon.h  resource.h  sound.cpp  sprite.cpp  sprite_anim.h  sprite_simple.cpp
src/resource/tools/: polygonpath.h  tools.h
src/scene/: sceneloader.h  sceneparser.cpp
src/tinyxml/: tinyxml.h
tools/: polygen
